--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,8 @@
     },
     "extends": "eslint:recommended",
     "parserOptions": {
-        "sourceType": "module"
+        "sourceType": "module",
+        "ecmaVersion": 2017
     },
     "rules": {
         "indent": [
@@ -31,6 +32,9 @@
             {
                 "allow": ["log"]
             }
+        ],
+        "no-constant-condition": [
+            "warn"
         ]
     }
 }
