--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,6 @@ publish_npm:
     - rm -f ./node_modules.tar.gz
     - npm run bump
     - yarn import
-    - npm publish
+    - npm publish --access public
   only:
     - tags
