--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,15 +17,27 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
+      - name: Set up Python
+        uses: actions/setup-python@v1
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pip
+          key: pip
+          id: pip-cache
+      - name: Install
+        if: steps.pip-cache.outputs.cache-hit != 'true'
+        run: pip install pyatv
       - uses: actions/cache@v2
         with:
           path: node_modules
           key: modules-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
+          id: module-cache
       - name: install dependencies
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: test
         run: npm run test
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -42,6 +54,7 @@ jobs:
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
       - run: npm run lint
+
   coverage:
     runs-on: ubuntu-latest
     steps:
@@ -49,28 +62,22 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
+      - name: Set up Python
+        uses: actions/setup-python@v1
+      - uses: actions/cache@v1
+        with:
+          path: ~/.cache/pip
+          key: pip
+          id: pip-cache
+      - name: Install
+        if: steps.pip-cache.outputs.cache-hit != 'true'
+        run: pip install pyatv
       - uses: actions/cache@v2
-        id: module-cache
         with:
           path: node_modules
-          key: modules-14-${{ hashFiles('**/package-lock.json') }}
-      - name: npm ci
+          key: modules-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
+          id: module-cache
+      - name: install dependencies
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
       - run: npm run coverage
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 14
-      - uses: actions/cache@v2
-        id: module-cache
-        with:
-          path: node_modules
-          key: modules-14-${{ hashFiles('**/package-lock.json') }}
-      - name: npm ci
-        if: steps.module-cache.outputs.cache-hit != 'true'
-        run: npm ci
-      - run: npm run build
