--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,18 +20,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
       - uses: actions/cache@v1
+        id: pip-cache
         with:
           path: ~/.cache/pip
           key: pip
-          id: pip-cache
-      - name: Install
-        if: steps.pip-cache.outputs.cache-hit != 'true'
-        run: pip install pyatv
+      - run: pip install pyatv
       - uses: actions/cache@v2
+        id: module-cache
         with:
           path: node_modules
           key: modules-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
-          id: module-cache
       - name: install dependencies
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
@@ -65,18 +63,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v1
       - uses: actions/cache@v1
+        id: pip-cache
         with:
           path: ~/.cache/pip
           key: pip
-          id: pip-cache
-      - name: Install
-        if: steps.pip-cache.outputs.cache-hit != 'true'
-        run: pip install pyatv
+      - run: pip install pyatv
       - uses: actions/cache@v2
+        id: module-cache
         with:
           path: node_modules
           key: modules-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
-          id: module-cache
       - name: install dependencies
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
