--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,9 @@
-name: Test
+name: Release
 on:
   push:
     branches:
-      - feature/**
-      - hotfix/**
-      - depfu/**
+      - develop
+      - master
 
 jobs:
   test:
@@ -72,25 +71,31 @@ jobs:
         id: module-cache
         with:
           path: node_modules
-          key: modules-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
+          key: modules-14-${{ hashFiles('**/package-lock.json') }}
       - name: install dependencies
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
       - run: npm run coverage || npm run coverage
 
-  build:
+  release:
     runs-on: ubuntu-latest
+    needs: [ test, lint, coverage]
     steps:
       - uses: actions/checkout@v1
       - uses: actions/setup-node@v1
         with:
           node-version: 14
+          registry-url: 'https://registry.npmjs.org'
       - uses: actions/cache@v2
         id: module-cache
         with:
           path: node_modules
-          key: modules-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
+          key: modules-14-${{ hashFiles('**/package-lock.json') }}
       - name: install dependencies
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
-      - run: npm run build
+      - name: semantic-release
+        run: npx semantic-release
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
