--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "node": ">=10.0.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/github": "^7.1.1",
+    "@semantic-release/npm": "^7.0.6",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/mocha": "^8.0.3",
     "@types/node": "^14.14.5",
     "@types/semver": "^7.3.4",
@@ -23,6 +29,8 @@
     "eslint": "^7.12.1",
     "mocha": "^8.2.0",
     "nyc": "^15.1.0",
+    "semantic-release": "^17.2.2",
+    "semantic-release-npm-deprecate-old-versions": "^1.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
@@ -36,7 +44,8 @@
     "test": "mocha",
     "coverage": "nyc mocha",
     "check": "./check.sh",
-    "postinstall": "./check.sh"
+    "postinstall": "./check.sh",
+    "prepublish": "tsc"
   },
   "preferGlobal": false,
   "main": "./dist/lib/instance.js",
