--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,6 +87,14 @@ jobs:
         with:
           node-version: 14
           registry-url: 'https://registry.npmjs.org'
+      - name: Set up Python
+        uses: actions/setup-python@v1
+      - uses: actions/cache@v1
+        id: pip-cache
+        with:
+          path: ~/.cache/pip
+          key: pip
+      - run: pip install pyatv
       - uses: actions/cache@v2
         id: module-cache
         with:
@@ -96,7 +104,9 @@ jobs:
         if: steps.module-cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: semantic-release
-        run: NPM_TOKEN=$NODE_AUTH_TOKEN npx semantic-release
+        run: |
+          mkdir -p ./gh-pages
+          NPM_TOKEN=$NODE_AUTH_TOKEN npx semantic-release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
