--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,6 +106,7 @@ jobs:
       - name: semantic-release
         run: |
           mkdir -p ./gh-pages
+          git config pull.rebase false
           NPM_TOKEN=$NODE_AUTH_TOKEN npx semantic-release
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
