--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -105,7 +105,7 @@ jobs:
         run: npm ci
       - name: semantic-release
         run: |
-          mkdir -p ./gh-pages
+          mkdir -p ./doc
           git config pull.rebase false
           NPM_TOKEN=$NODE_AUTH_TOKEN BRANCH=${GITHUB_REF#refs/heads/} npx semantic-release
         env:
