--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mochawesome": "^6.2.2",
     "nyc": "^15.1.0",
     "semantic-release": "^17.4.2",
+    "semantic-release-license": "^1.0.3",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
