--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -111,6 +111,16 @@ jobs:
     steps:
       - name: ☁️ Checkout Project
         uses: actions/checkout@v2
+      - name: 🔧 Set up Python
+        uses: actions/setup-python@v1
+      - name: 🔧 Setup pip cache
+        uses: actions/cache@v1
+        id: pip-cache
+        with:
+          path: ~/.cache/pip
+          key: pip
+      - name: 📦 Install pyatv
+        run: pip install pyatv
       - name: 🔧 Setup node.js
         uses: actions/setup-node@v2
         with:
