--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "semantic-release": "^17.4.2",
     "semantic-release-license": "^1.0.3",
     "ts-node": "^10.0.0",
-    "typedoc": "^0.20.36",
+    "typedoc": "^0.21.0-beta.2",
     "typescript": "^4.2.4"
   },
   "scripts": {
