--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -19,12 +19,8 @@ jobs:
         uses: actions/checkout@v2
       - name: 🔧 Set up Python
         uses: actions/setup-python@v2.3.0
-      - name: 🔧 Setup pip cache
-        uses: actions/cache@v2.1.7
-        id: pip-cache
         with:
-          path: ~/.cache/pip
-          key: pip
+          - cache: 'pip'
       - name: 📦 Install pyatv
         run: pip install pyatv
       - name: 🔧 Setup node.js
@@ -46,12 +42,8 @@ jobs:
         uses: actions/checkout@v2
       - name: 🔧 Set up Python
         uses: actions/setup-python@v2.3.0
-      - name: 🔧 Setup pip cache
-        uses: actions/cache@v2.1.7
-        id: pip-cache
         with:
-          path: ~/.cache/pip
-          key: pip
+          - cache: 'pip'
       - name: 📦 Install pyatv
         run: pip install pyatv
       - name: 🔧 Setup node.js
@@ -94,12 +86,8 @@ jobs:
         uses: actions/checkout@v2
       - name: 🔧 Set up Python
         uses: actions/setup-python@v2.3.0
-      - name: 🔧 Setup pip cache
-        uses: actions/cache@v2.1.7
-        id: pip-cache
         with:
-          path: ~/.cache/pip
-          key: pip
+          - cache: 'pip'
       - name: 📦 Install pyatv
         run: pip install pyatv
       - name: 🔧 Setup node.js
