--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/checkout@v3
       - name: 🔧 Set up Python
         uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
       - name: 🔧 Setup pip cache
         uses: actions/cache@v3
         id: pip-cache
@@ -46,6 +48,8 @@ jobs:
         uses: actions/checkout@v3
       - name: 🔧 Set up Python
         uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
       - name: 🔧 Setup pip cache
         uses: actions/cache@v3
         id: pip-cache
@@ -95,6 +99,8 @@ jobs:
         uses: actions/checkout@v3
       - name: 🔧 Set up Python
         uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
       - name: 🔧 Setup pip cache
         uses: actions/cache@v3
         id: pip-cache
