fix: Add `check.sh` to npm module

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "require": "./dist/lib/index.cjs"
   },
   "files": [
-    "/dist"
+    "/dist",
+    "check.sh"
   ],
   "homepage": "https://github.com/sebbo2002/js-template#readme",
   "license": "MIT",
