--- a/package.json
+++ b/package.json
@@ -18,23 +18,23 @@
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^4.17.21",
     "@types/mocha": "^10.0.7",
-    "@types/node": "^20.14.10",
+    "@types/node": "^22.5.0",
     "@types/semver": "^7.5.8",
     "c8": "^10.1.2",
-    "eslint": "^9.6.0",
+    "eslint": "^9.9.0",
     "eslint-plugin-jsonc": "^2.16.0",
     "esm": "^3.2.25",
     "license-checker": "^25.0.1",
     "mocha": "^10.7.3",
     "mochawesome": "^7.1.3",
-    "semantic-release": "^24.0.0",
+    "semantic-release": "^24.1.0",
     "semantic-release-license": "^1.0.3",
     "source-map-support": "^0.5.21",
-    "tsup": "^8.1.0",
+    "tsup": "^8.2.4",
     "tsx": "^4.16.2",
-    "typedoc": "^0.26.3",
+    "typedoc": "^0.26.6",
     "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.0-alpha.41"
+    "typescript-eslint": "^8.2.0"
   },
   "engines": {
     "node": "18 || 20 || >=22.0.0"
