--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -31,7 +31,7 @@ jobs:
           path: ~/.cache/pip
           key: pip
       - name: 📦 Install pyatv
-        run: pip install pyatv
+        run: pip3 install --upgrade git+https://github.com/postlund/pyatv.git
       - name: 🔧 Setup node.js
         uses: actions/setup-node@v4
         with:
@@ -60,7 +60,7 @@ jobs:
           path: ~/.cache/pip
           key: pip
       - name: 📦 Install pyatv
-        run: pip install pyatv
+        run: pip3 install --upgrade git+https://github.com/postlund/pyatv.git
       - name: 🔧 Setup node.js
         uses: actions/setup-node@v4
         with:
@@ -117,7 +117,7 @@ jobs:
           path: ~/.cache/pip
           key: pip
       - name: 📦 Install pyatv
-        run: pip install pyatv
+        run: pip3 install --upgrade git+https://github.com/postlund/pyatv.git
       - name: 🔧 Setup node.js
         uses: actions/setup-node@v4
         with:
