refactor: Run eslint + prettier

--- a/.nycrc
+++ b/.nycrc
@@ -1,12 +1,8 @@
 {
     "cache": false,
     "check-coverage": true,
-    "extension": [
-        ".ts"
-    ],
-    "include": [
-        "src/lib/*.ts"
-    ],
+    "extension": [".ts"],
+    "include": ["src/lib/*.ts"],
     "exclude": [
         "coverage/**",
         "node_modules/**",
@@ -16,12 +12,7 @@
     "report-dir": "./docs/coverage/",
     "temp-directory": "./.nyc_output",
     "sourceMap": true,
-    "reporter": [
-        "text",
-        "text-summary",
-        "cobertura",
-        "html"
-    ],
+    "reporter": ["text", "text-summary", "cobertura", "html"],
     "all": true,
     "instrument": true,
     "branches": 80,
